--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html" class="active">Bob Dylan, premio Nobel de literatura 2016</a></li>
-            <li><a href="listado-nobel-literatura.html">Premios NObel de literatura(2013-2022)</a></li>
+            <li><a href="listado-nobel-literatura.html">Premios Nobel de literatura(2013-2022)</a></li>
             <li><a href="motivacion-premios.html">Motivación de los premios(2013-2022)</a></li>
         </ul>
     </nav>
