--- a/listado-nobel-literatura.html
+++ b/listado-nobel-literatura.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Bob Dylan, premio Nobel de literatura 2016</a></li>
-            <li><a href="listado-nobel-literatura.html" class="active">Premios NObel de literatura(2013-2022)</a></li>
+            <li><a href="listado-nobel-literatura.html" class="active">Premios Nobel de literatura(2013-2022)</a></li>
             <li><a href="motivacion-premios.html">Motivación de los premios(2013-2022)</a></li>
         </ul>
     </nav>
@@ -24,9 +24,9 @@
         <article> 
             <h1>Premios Nobel de literatura</h1>
             <p class="article__p--centrado">2013 - 2022</p>
-            <p class="article__p--centrado">ORDENADOS POR EL IDIOMA DE SU PRODUCCIÓN LITERARIA</p>
+            <p class="article__p--centrado--chiquito">ORDENADOS POR EL IDIOMA DE SU PRODUCCIÓN LITERARIA</p>
 
-            <section>
+            <section class="section--centrada">
                 <h4><img src="img/idioma.png" alt="Icono del idioma" class="icon"> Inglés</h4>
                 <ul>
                     <li>2013: <a href="motivacion-premios.html#alice-munro">Alice Munro</a></li>
