--- a/listado-nobel-literatura.html
+++ b/listado-nobel-literatura.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Declaramos que el documento es HTML5, codificadción utf-8, para soportar caracteres especiales, y que se adapte a diferentes tamañso de pantalla -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--describimos de que va la pagina y le damos un titulo-->
     <meta name="description" content="Página sobre todos los premio de literatura dados entre el 2013 y el 2022.">
     <title>Premios Nobel de Literatura</title>
+    <!-- conectamos con la pagina de estilos-->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+<!--iniciamos el cuerpo de la pagina con una cabezera con el titulo-->
 <body>
     <header>
         <h1> <a href="index.html"> Letras</a></h1>
     </header>
-
+    <!--creamos un apartado de navegación para poder cambiar de pagina facilmente-->
     <nav>
         <ul>
             <li><a href="index.html">Bob Dylan, premio Nobel de literatura 2016</a></li>
@@ -19,15 +23,20 @@
             <li><a href="motivacion-premios.html">Motivación de los premios(2013-2022)</a></li>
         </ul>
     </nav>
-
+    <!-- Contenido principal -->
     <main>
+        <!--creamos el articulo de la pagina-->
         <article> 
+         <!--ponemos otro titulo1 por su importancia-->
             <h1>Premios Nobel de literatura</h1>
             <p class="article__p--centrado">2013 - 2022</p>
             <p class="article__p--centrado--chiquito">ORDENADOS POR EL IDIOMA DE SU PRODUCCIÓN LITERARIA</p>
-
+            <!--y detacamos la sección principal-->
             <section class="section--centrada">
+                <!--cada apartado tendrá un titulo pero de menor importancia pero lo destacamos-->
+                <!--ademas utilizaremos un img para poner el icono-->
                 <h4><img src="img/idioma.png" alt="Icono del idioma" class="icon"> Inglés</h4>
+                <!--creamos una lista desordeanada con diferentes enlaces-->
                 <ul>
                     <li>2013: <a href="motivacion-premios.html#alice-munro">Alice Munro</a></li>
                     <li>2016: <a href="motivacion-premios.html#bob-dylan">Bob Dylan</a></li>
@@ -62,7 +71,7 @@
         </article>
     </main>
 
-
+    <!--una vez acabda la sección principal creamos un pie de pagina-->
     <footer>
         <p>
             Actividad realizada por Moisés García García. Diseño de interfaces web
