--- a/motivacion-premios.html
+++ b/motivacion-premios.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+        <!-- Declaramos que el documento es HTML5, codificadción utf-8, para soportar caracteres especiales, y que se adapte a diferentes tamañso de pantalla -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--describimos de que va la pagina y le damos un titulo-->
     <meta name="description" content="Página sobre las motivaciones de los premios noveles de literatura dados entre el 2013 y el 2022.">
     <title>Motivación de los premios Nobel de literatura</title>
+    <!-- conectamos con la pagina de estilos-->   
     <link rel="stylesheet" href="css/estilos.css"> 
 </head>
+<!--iniciamos el cuerpo de la pagina con una cabezera con el titulo-->
 <body>
     <header>
         <h1> <a href="index.html"> Letras</a></h1>
     </header>
+    <!--creamos un apartado de navegación para poder cambiar de pagina facilmente-->
     <nav>
         <ul>
             <li><a href="index.html">Bob Dylan, premio Nobel de literatura 2016</a></li>
@@ -18,17 +23,23 @@
             <li><a href="motivacion-premios.html" class="active">Motivación de los premios(2013-2022)</a></li>
         </ul>
     </nav>
+    <!-- Contenido principal -->
     <main>
+        <!--empezamos el articulo a tratar-->
         <article>
+            <!--ponemos otro titulo1 por su importancia-->
             <h1>Motivación de los premios Nobel de literatura</h1>
             <p class="article__p--centrado">2013 - 2022</p>
             <p class="article__p--centrado">Ordenados por año de entrega</p>
-           
+           <!--creamos la sección principal con un-->
             <section>
+                <!--creamos la lista descriptiva-->
                 <dl>
+                    <!--añadimos el titulo del apartado de la lista con un enlace-->
                     <dt>
                         <a href="https://www.nobelprize.org/prizes/literature/2013/munro/facts/" class="a--destacados">Alice Munro</a>
                     </dt>
+                    <!--y la descripción de dicho titulo con  span para destacar apartados-->
                     <dd>
                         <span class="dd--año">2013</span>: Alice Munro<span class="obra">master of the contemporary short story</span>.
                     </dd>
@@ -92,7 +103,7 @@
             </section>
         </article>
     </main>
-
+    <!-- una ves terminada la lista creamos un pie de pagina -->
     <footer>
         <p>
             Actividad realizada por Moisés García García. Diseño de interfaces web
