--- a/motivacion-premios.html
+++ b/motivacion-premios.html
@@ -36,7 +36,7 @@
                 <!--creamos la lista descriptiva-->
                 <dl>
                     <!--añadimos el titulo del apartado de la lista con un enlace-->
-                    <dt>
+                    <dt id="alice-munro">
                         <a href="https://www.nobelprize.org/prizes/literature/2013/munro/facts/" class="a--destacados">Alice Munro</a>
                     </dt>
                     <!--y la descripción de dicho titulo con  span para destacar apartados-->
@@ -44,55 +44,55 @@
                         <span class="dd--año">2013</span>: Alice Munro<span class="obra">master of the contemporary short story</span>.
                     </dd>
     
-                    <dt>
+                    <dt id="patrick-modiano">
                         <a href="https://www.nobelprize.org/prizes/literature/2014/modiano/facts/" class="a--destacados">Patrick Modiano </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2014</span>: Patrick Modiano <span class="obra">for the art of memory with which he has evoked the most ungraspable human destinies and uncovered the life-world of the occupation.</span>                        
                     </dd>
-                    <dt>
+                    <dt id="svetlana-aleksievich">
                         <a href="https://www.nobelprize.org/prizes/literature/2015/alexievich/facts/" class="a--destacados">Svetlana Aleksievich </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2015</span>: Svetlana Aleksievich <span class="obra">for her polyphonic writings, a monument to suffering and courage in our time.</span>   
                     </dd>                 
-                    <dt>
+                    <dt  id="bob-dylan">
                         <a href="https://www.nobelprize.org/prizes/literature/2016/dylan/facts/" class="a--destacados">Bob Dylan  </a>
                     </dt>    
                     <dd>
                         <span class="dd--año">2016</span>: Bob Dylan <span class="obra">for having created new poetic expressions within the great American song tradition.</span>  
                     </dd>                  
-                    <dt>
+                    <dt id="kazuo-ishiguro">
                         <a href="https://www.nobelprize.org/prizes/literature/2017/ishiguro/facts/" class="a--destacados">Kazuo Ishiguro  </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2017</span>: Kazuo Ishiguro <span class="obra">who, in novels of great emotional force, has uncovered the abyss beneath our illusory sense of connection with the world.</span>                   
                     </dd>
-                    <dt>
+                    <dt id="olga-tokarczuk">
                         <a href="https://www.nobelprize.org/prizes/literature/2018/tokarczuk/facts/" class="a--destacados">Olga Tokarczuk  </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2018</span>: Olga Tokarczuk <span class="obra">for a narrative imagination that with encyclopedic passion represents the crossing of boundaries as a form of life.</span> 
                     </dd>
-                    <dt>
+                    <dt id="peter-handke">
                         <a href="https://www.nobelprize.org/prizes/literature/2019/handke/facts/" class="a--destacados">Peter Handke </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2019</span>: Peter Handke <span class="obra">for an influential work that with linguistic ingenuity has explored the periphery and the specificity of human experience.</span> 
                     </dd>
-                    <dt>
+                    <dt id="louise-gluck">
                         <a href="https://www.nobelprize.org/prizes/literature/2020/gluck/facts/" class="a--destacados">Louise Glück  </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2020</span>: Louise Glück <span class="obra">for her unmistakable poetic voice that with austere beauty makes individual existence universal.</span> 
                     </dd>
-                    <dt>
+                    <dt id="abdulrazak-gurnah">
                         <a href="https://www.nobelprize.org/prizes/literature/2021/gurnah/facts/" class="a--destacados">Abdulrazak Gurnah  </a>
                     </dt>
                     <dd>
                         <span class="dd--año">2021</span>: Abdulrazak Gurnah <span class="obra">for his uncompromising and compassionate penetration of the effects of colonialism and the fate of the refugee in the gulf between cultures and continents.</span>
                     </dd>
-                    <dt>
+                    <dt id="annie-ernaux">
                         <a href="https://www.nobelprize.org/prizes/literature/2022/ernaux/facts/" class="a--destacados">Annie Ernaux  </a>
                     </dt>
                     <dd>
